# Simple-Five-Pointed-Star

./: CMakeLists.txt  README.md  config.h  data.h  hw1.docx  main.cpp
shader/: illumination.frag  illumination.vert  loader.py  particle.frag  particle.vert  shaderTextBuf.h  simple.frag  simple.vert
sourcesLoader/: bmpLoader.h  fileLoader.h  shaderLoader.h  textureLoader.h
texture/: loader.py  textureTextBuf.h
